# ai-platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  routers.py
config/: settings.py
core/: entities.py  interfaces.py
infrastructure/: file_loader.py
processors/: file_processor.py  text_splitter.py
services/: __init__.py  storage_manager.py
utils/: document_processor.py  file_loader.py  file_validator.py
vector_store/: __init__.py  qdrant_impl.py
