[project]
name = "ai-platform"
version = "1.0.0"
description = "Production-ready AI Platform framework with LangChain and Qdrant"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.0.300",
    "qdrant-client>=1.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6"
]