[project]
name = "ai-platform"
version = "1.0.0"
description = "Production-ready AI Platform framework with LangChain and Qdrant"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.0.300",
    "langchain-community>=0.0.30",
    "qdrant-client>=1.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.0.0",
    "orjson>=3.0.0",
    "PyYAML>=6.0",
    "defusedxml>=0.7.0",
    "pdfminer.six>=20220319",
    "pandas>=1.5.0",
    "xlrd>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0"
]